--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -1,49 +1,52 @@
-.navbar {
-    display: flex;
-    justify-content: space-between;
+body {
+    font-family: "Campton", sans-serif;
+    margin: 0; /* remove margin around body */
+  }
+  
+  .navbar {
+    position: fixed;
+    top: 2%;
+    left: 0;
+    right: 0;
+    display: inline-flexbox;
+    font-family: "Campton", sans-serif;
     align-items: center;
-    background: linear-gradient(90deg,rgba(36,105,222,1) 0%, rgba(108,95,197,1) 50%);
+    background: transparent;
     padding: 10px;
     border-radius: 0px;
   }
-
+  
   .navbar-brand {
-    font-size: 1.5rem;
-    color: white;
-    text-decoration: none;
-  }
-
-  .navbar-search {
-    display: flexbox;
-    align-items: center;
-    background-color: #f2f2f2;
-    border-radius: 10px;
-    padding: 12px;
-    margin: 0 px;
-    width: 40%;
-  }
-
-  .navbar-search input {
+    display: inline-flexbox;
+    float: left;
+    margin-left: 30px;
     border: none;
-    background-color: transparent;
-    outline: none;
-    margin-right: 5px;
   }
-
-  .navbar-search-btn {
-    display: none;
+  
+  .navbar-btn-box {
+    
+    display: inline-flexbox;
+    float: right;
+    margin-top: 2%;
+    /* transform: translateY(100%); */
   }
-
+  
   .navbar-btn {
-    background-color: black;
-    color: white;
-    border-radius: 20px;
-    padding: 10px 20px;
+    background-color: transparent;
+    color: #246c8e;
+    font-size: larger;
+    border-radius: 10px;
+    padding: 20px 40px;
+    margin: 20px 40px;
     text-decoration: none;
-    font-weight: bold;
+    font-family: "Campton", sans-serif;
+    font-style: italic;
+    font-weight: 700;
     cursor: pointer;
+    text-transform: none;
   }
-
+  
   .navbar-btn:hover {
-    background-color: #333;
+    background-color: #eee;
+    text-decoration: none;
   }
