--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -1,7 +1,8 @@
-div img {
-  width: 35px;
-  height: 35px;
-  margin-right: 10px;
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; /* add this line */
+  position: relative; /* add this line */
 }
 
 .content {
@@ -11,6 +12,10 @@ div img {
 }
 
 .footer {
+  position: fixed; /* add this line */
+  bottom: 0;
+  left: 0;
+  right: 0;
   padding-top: 20px;
   padding-bottom: 20px;
   background: #246c8e;
