--- a/frontend/src/components/css/profile.css
+++ b/frontend/src/components/css/profile.css
@@ -9,7 +9,7 @@
   }
   
   .book-container {
-    width: 31%;
+    width: 23%;
     margin-bottom: 30px;
     display: flex;
     flex-direction: column;
@@ -24,7 +24,7 @@
     display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 300px;
+    max-width: 200px;
     height: auto;
     cursor: pointer;
     border-radius: 5px 5px 0 0;
@@ -68,4 +68,29 @@
     font-size: 14px;
     color: black;
     margin-top: 10px;
+  }
+  
+  .remove-button {
+    background-color: #eb594c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+  
+  .remove-button:hover {
+    background-color: #c2382d;
+  }
+  
+  @media (max-width: 768px) {
+    .results-container {
+      justify-content: center;
+    }
+  
+    .book-container {
+      width: 45%;
+    }
   }
