--- a/frontend/src/components/css/profile.css
+++ b/frontend/src/components/css/profile.css
@@ -18,6 +18,9 @@
     background-color: white;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    animation-fill-mode: both;
   }
   
   .book-cover {
@@ -83,6 +86,19 @@
   
   .remove-button:hover {
     background-color: #c2382d;
+  }
+  
+  /* Define the animation */
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 100%, 0);
+    }
+  
+    to {
+      opacity: 1;
+      transform: none;
+    }
   }
   
   @media (max-width: 768px) {
