--- a/frontend/src/components/css/profile.css
+++ b/frontend/src/components/css/profile.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 500px;
+    height: auto;
     background-color: white;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -28,6 +28,8 @@
     margin: 0 auto;
     width: 100%;
     max-width: 200px;
+    max-height: 130px;
+    height:auto;
     height: auto;
     cursor: pointer;
     border-radius: 5px 5px 0 0;
